--- a/H.T.M.L._Pages/Home.html
+++ b/H.T.M.L._Pages/Home.html
@@ -21,7 +21,7 @@
     </ul></nav>
     <div class="hero">
       <div class="hero-image">
-        <img src="Client3_Magazine2.png" alt="">
+        <img src="Images/Client3_LogoPalette1_C7B65E.png" alt="">
       </div>
       <div class="hero-text">
         <h1 id="hero-text-title">Book Heaven Bookstore</h1>
