--- a/H.T.M.L._Pages/Home.html
+++ b/H.T.M.L._Pages/Home.html
@@ -12,7 +12,7 @@
     
     <nav class="navbar"><ul>
       <div id="navbar-logo">
-      <img src="Client3_LogoPalette1_C7B65E.png" alt="" width="30px">
+      <img src="Images/Client3_LogoPalette1_C7B65E.png" alt="" width="30px">
       <p>Book Heaven Bookstore</p></div>
       <li>Shop</li>
       <li>Contact</li>
@@ -21,7 +21,7 @@
     </ul></nav>
     <div class="hero">
       <div class="hero-image">
-        <img src="" alt="">
+        <img src="Images/Client3_Magazine1.png" alt="">
       </div>
       <div class="hero-text">
         <h1 id="hero-text-title">Book Heaven Bookstore</h1>
