--- a/H.T.M.L. Pages/Home.html
+++ b/H.T.M.L. Pages/Home.html
@@ -4,8 +4,9 @@
     <title>Book Heaven Bookstore</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <link rel="stylesheet" href="../C.S.S._Pages/Home.css" />
+    <script type="module" src="/J.S._Pages/Home.js"></script>
+    <script src="https://kit.fontawesome.com/f9f4920310.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <main>
@@ -31,7 +32,18 @@
           <button id="hero-btn">Shop Now</button>
       </div>
     </div>
-     
+     <div class="perks" id="Perks">
+      <div class="perk-one">
+        <div class="perk-one-icon"><i class="fa-solid fa-truck"></i></div>
+        <div class="perk-one-text">
+          <h1 class="perk-title">Free Shipping</h1>
+          <p class="perk-desc">Free Shipping for orders over $25 dollars</p>
+        </div>
+      </div>
+      <div class="perk-two"></div>
+      <div class="perk-three"></div>
+      <div class="perk-four"></div>
+     </div>
     
     </main>
   </body>
