--- a/H.T.M.L. Pages/Home.html
+++ b/H.T.M.L. Pages/Home.html
@@ -4,7 +4,7 @@
     <title>Book Heaven Bookstore</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../C.S.S._Pages/Home.css" />
+    <link rel="stylesheet" href="/C.S.S._Pages/Home.css" />
     <script type="module" src="/J.S._Pages/Home.js"></script>
     <script src="https://kit.fontawesome.com/f9f4920310.js" crossorigin="anonymous"></script>
   </head>
