--- a/H.T.M.L./Home.html
+++ b/H.T.M.L./Home.html
@@ -33,18 +33,50 @@
       </div>
     </div>
      <div class="perks" id="Perks">
+
       <div class="perk-one">
         <div class="perk-one-icon"><i class="fa-solid fa-truck"></i></div>
         <div class="perk-one-text">
           <h1 class="perk-title">Free Shipping</h1>
           <p class="perk-desc">Free Shipping for orders over $25 dollars</p>
-        </div>
-      </div>
-      <div class="perk-two"></div>
-      <div class="perk-three"></div>
-      <div class="perk-four"></div>
+        </div></div>
+
+      <div class="perk-two">
+        <div class="perk-two-icon"><i class="fa-solid fa-truck"></i></div>
+        <div class="perk-two-text">
+          <h1 class="perk-title">Free Shipping</h1>
+          <p class="perk-desc">Free Shipping for orders over $25 dollars</p>
+      </div></div>
+
+      <div class="perk-three">
+        <div class="perk-three-icon"><i class="fa-solid fa-truck"></i></div>
+        <div class="perk-three-text">
+          <h1 class="perk-title">Free Shipping</h1>
+          <p class="perk-desc">Free Shipping for orders over $25 dollars</p>
+      </div></div>
+
+      <div class="perk-four">
+        <div class="perk-four-icon"><i class="fa-solid fa-truck"></i></div>
+        <div class="perk-four-text">
+          <h1 class="perk-title">Free Shipping</h1>
+          <p class="perk-desc">Free Shipping for orders over $25 dollars</p>
+      </div></div>
+
      </div>
-    
+
+     <div class="promos">
+
+      <div class="promo-one">
+        <div class="promo-img"><img src="" alt=""></div>
+        <div class="promo-text">
+          <h1 class="promo-title"></h1>
+          <p class="promo-desc"></p>
+          <button class="promo-btn"></button>
+        </div>
+        
+      </div>
+
+     </div>
     </main>
   </body>
 </html>
